--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>Sign up now!</h1>
         <h2>And get started on this <em>epic </em>journey!</h2>
 
-        <form action="">
+        <form action="#" method="get">
           <div class="group">
             <input type="text" name="name" id="" placeholder="Name" required />
           </div>
@@ -62,6 +62,7 @@
               type="password"
               name="password"
               id=""
+              minlength="8"
               pattern="(?=.*\d)(?=.*[\W_]).{8,}"
               placeholder="Password*"
               required
