--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <title>Sign-Up-Form</title>
   </head>
   <body>
-    <header></header>
     <main>
       <div class="container">
         <h1>Sign up now!</h1>
@@ -27,54 +26,64 @@
 
         <form action="#" method="get">
           <div class="group">
-            <input type="text" name="name" id="" placeholder="Name" required />
+            <input
+              type="text"
+              name="name"
+              id="name"
+              placeholder="Name"
+              required
+            />
           </div>
+
           <div class="group">
             <input
               type="text"
               name="surname"
-              id=""
+              id="surname"
               placeholder="Surname"
               required
             />
           </div>
+
           <div class="group">
             <input
               type="email"
               name="email"
-              id=""
+              id="email"
               placeholder="mymail@email.com"
               required
             />
           </div>
+
           <div class="group">
             <input
               type="tel"
               name="phone"
-              id=""
+              id="phone"
               placeholder="370 XXX XXXXX"
               pattern="370[0-9]{5}[0-9]{3}"
             />
           </div>
-          <div class="group"></div>
+
           <div class="group">
             <input
               type="password"
               name="password"
-              id=""
+              id="password"
               minlength="8"
               pattern="(?=.*\d)(?=.*[\W_]).{8,}"
               placeholder="Password*"
               required
             />
           </div>
-        </form>
-        <p class="password-msg">
-          *Password must contain 8 characters at least one special character and
-          one number.
-        </p>
-        <div class="submitForm">
+          <p class="password-msg">
+            *Password must contain 8 characters at least one special character
+            and one number.
+          </p>
           <button type="submit">Create Account</button>
+        </form>
+
+        <div class="submitForm">
           <p>Already have an account? <a href="#">Log in</a></p>
         </div>
       </div>
